crates/uitest/fixtures/parser/index.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/index.fe
---
error[1-0001]: unexpected syntax while parsing index expression
  ┌─ index.fe:2:5
  │
2 │ x[1 a]
  │     ^ unexpected

error[1-0001]: missing closing `]` for index expression
  ┌─ index.fe:3:8
  │
3 │ x[2 + 3
  │        ^ expected `]`


